X-ray Broken in Pose mode #65745

Closed
opened 2019-06-12 10:26:59 +02:00 by Aleksandr · 11 comments

System Information
Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-11 21:45, hash: d93a7290e5
Worked: (optional)

Short description of error
X-ray glitch and corrupted when I switch it on in alt+z -> Show Bone X-Ray
However! When I switch on X-Ray in Top Bar it is working correctly

Exact steps for others to reproduce the error
Select armature -> Pose Mode -> alt+z
Select armature -> Pose Mode -> Top Bar - X-Ray
CompareXray_Broken.blend

**System Information** Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-11 21:45, hash: `d93a7290e5` Worked: (optional) **Short description of error** X-ray glitch and corrupted when I switch it on in alt+z -> Show Bone X-Ray `However! When I switch on X-Ray in Top Bar it is working correctly` **Exact steps for others to reproduce the error** Select armature -> Pose Mode -> alt+z Select armature -> Pose Mode -> Top Bar - X-Ray **Compare**[Xray_Broken.blend](https://archive.blender.org/developer/F7099830/Xray_Broken.blend)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this on my end. Does this still happen with the latest build?

I can't reproduce this on my end. Does this still happen with the latest build?
Author

All the same... Alt+Z = working bad, X-Ray in interface - working well. Try to switch on both of this: alt+z and press button from top bar and vice versa.
Looks like blender have 2 X-Rays.

Xray_Broken.png

All the same... Alt+Z = working bad, X-Ray in interface - working well. **Try to switch on both of this: alt+z and press button from top bar and vice versa.** Looks like blender have 2 X-Rays. ![Xray_Broken.png](https://archive.blender.org/developer/F7107382/Xray_Broken.png)

Added subscriber: @brecht

Added subscriber: @brecht

@brecht can you reproduce this?

@brecht can you reproduce this?
Jeroen Bakker was assigned by Brecht Van Lommel 2019-06-18 14:07:39 +02:00

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker

I can confirm, I think this is one for @Jeroen-Bakker or @fclem.

Note you have to press Alt+Z after entering pose mode.

I can confirm, I think this is one for @Jeroen-Bakker or @fclem. Note you have to press Alt+Z after entering pose mode.

This is because the overlay does not use the same matrices transform.

We should create copies of very common GPU shader used in DRW to use common_view_lib.

This is because the overlay does not use the same matrices transform. We should create copies of very common GPU shader used in DRW to use common_view_lib.

This issue was referenced by a3a6cda8fb

This issue was referenced by a3a6cda8fb678432e0552d23b0226e8617f26e5f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65745
No description provided.