source/blender/draw/modes/shaders/pose_selection_vert.glsl
@@ -1,0 +1,12 @@
+
+in vec3 pos;
+
+void main()
+{
+  vec3 world_pos = point_object_to_world(pos);
+  gl_Position = point_world_to_ndc(world_pos);
+
+#ifdef USE_WORLD_CLIP_PLANES
+  world_clip_planes_calc_clip_distance(world_pos);
+#endif
+}
